@@ -1,7 +1,7 @@
 Package: clusteval
 Title: Evaluation of Clustering Algorithms
-Version: 0.1
-Date: 2012-08-30
+Version: 0.2
+Date: 2013-07-15
 Author: John A. Ramey
 Maintainer: John A. Ramey <johnramey@gmail.com>
 Description: An R package that provides a suite of tools to evaluate clustering
@@ -9,8 +9,9 @@ Description: An R package that provides a suite of tools to evaluate clustering
 Depends:
     R (>= 2.15)
 Imports:
-    parallel,
+    ggplot2,
     mvtnorm,
+    parallel,
     Rcpp (>= 0.9.13)
 LinkingTo: Rcpp
 License: MIT
