@@ -1,3 +1,4 @@
+S3method(plot,clustomit)
 export(adjusted_rand)
 export(boot_omit)
 export(cluster_similarity)
@@ -19,6 +20,7 @@ export(sim_student)
 export(sim_unif)
 export(sokal_sneath)
 import(Rcpp)
+import(ggplot2)
 import(mvtnorm)
 import(parallel)
 useDynLib(clusteval)
